@@ -35,6 +35,7 @@
 	#include "explore-hid.h"
 	#include "apc-hid.h"
 	#include "belkin-hid.h"
+	#include "cps-hid.h"
 	#include "liebert-hid.h"
 	#include "tripplite-hid.h"
 #endif
@@ -52,6 +53,7 @@ static subdriver_t *subdriver_list[] = {
 #ifndef SHUT_MODE
 	&apc_subdriver,
 	&belkin_subdriver,
+	&cps_subdriver,
 	&liebert_subdriver,
 	&tripplite_subdriver,
 #endif
